--- a/JorkFoodSite/Client/wwwroot/index.html
+++ b/JorkFoodSite/Client/wwwroot/index.html
@@ -7,12 +7,12 @@
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Поръчки York</title>
     <base href="/" />
-    <link href="css/app.css"
+    <link href="css/app.css?version=0.1"
           rel="stylesheet" />
     <link rel="icon"
           type="image/favicon"
           href="favicon.ico" />
-    <link href="JorkFoodSite.Client.styles.css"
+    <link href="JorkFoodSite.Client.styles.css?version=0.1"
           rel="stylesheet" />
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
