--- a/JorkFoodSite/Client/wwwroot/index.html
+++ b/JorkFoodSite/Client/wwwroot/index.html
@@ -23,15 +23,11 @@
 
 <body>
     <div id="app">
-        <svg class="loading-progress">
-            <circle r="40%"
-                    cx="50%"
-                    cy="50%" />
-            <circle r="40%"
-                    cx="50%"
-                    cy="50%" />
-        </svg>
-        <div class="loading-progress-text"></div>
+        <div class="spinner-square">
+            <div class="square-1 square"></div>
+            <div class="square-2 square"></div>
+            <div class="square-3 square"></div>
+        </div>
     </div>
 
     <div id="blazor-error-ui">
